# intro2causal

./: .gitignore  CLAUDE.md  README.md  STATUS.md  cheatsheet.html  index.html  infographic_instructions.md  main.py  pyproject.toml  tutors.html
book/: _quarto.yml  custom.css  index.qmd
book/_book/: custom.css  index.html  search.json
book/notebooks_quarto/: 01-randomized-trials.qmd  02-regression.qmd  03-instrumental-variables.qmd  04-regression-discontinuity.qmd  05-differences-in-differences.qmd  06-wages-of-schooling.qmd
data/: README.md
data/ch1/: nhis_clean.csv  (+3 more)
notebooks_colab/: 01-randomized-trials.ipynb  02-regression.ipynb  03-instrumental-variables.ipynb  04-regression-discontinuity.ipynb  05-differences-in-differences.ipynb  06-wages-of-schooling.ipynb
notebooks_md/: 01-randomized-trials.md  02-regression.md  03-instrumental-variables.md  04-regression-discontinuity.md  05-differences-in-differences.md  06-wages-of-schooling.md
notebooks_quarto/: 01-randomized-trials.qmd  02-regression.qmd  03-instrumental-variables.qmd  04-regression-discontinuity.qmd  05-differences-in-differences.qmd  06-wages-of-schooling.qmd
original-book/: 00-front-matter.md  00-introduction.md  01-randomized-trials.md  02-regression.md  03-instrumental-variables.md  04-regression-discontinuity.md  05-differences-in-differences.md  06-wages-of-schooling.md  07-abbreviations.md  08-empirical-notes.md  Mastering metrics with latex.md  Mastering metrics.md
tutors/: case-study-explainer.md  code-first.md  exam-coach.md  learning-coach.md  socratic-challenger.md
(+45 files in other folders)
